<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="bienvenu">BIENVENU SUR SAMAJOB!</string>
    <string name="app_name">SamaJob</string>
    <string name="action_settings">Settings</string>
    <string name="authentification">Authentification!</string>
    <string name="login">Saisir identifiant</string>
    <string name="password">Saisir mot de passe</string>
    <string name="connexion">Se connecter</string>
    <string name="quitter">Quitter</string>
    <string name="forget">Mot de passe oublie ?</string>
    <string name="inscription">Inscription</string>
    <string name="oubier">Renseigner ID</string>
    <string name="offre">OFFRE DETAILLE</string>
    <string name="offredispo">Offres disponibles</string>
    <string name="id">ID</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="email">Email</string>
    <string name="log">Login</string>
    <string name="pass">Password</string>
    <string name="valider">Valider</string>
     <string name="listons">Notifications Offres</string>
    <string name="annuler">Annuler</string>
    <string name="titre">Titre</string>
    <string name="categorie">Categorie</string>
    <string name="contrat">Contrat</string>
    <string name="description">Description</string>
    <string name="avantages">Avantages</string>
    <string name="competence">Competence</string>
    <string name="candidater">Candidater</string>
    <string name="datedebut">Date debut</string>
    <string name="datefin">Date fin</string>
    <string name="datecloture">Date cloture</string>
    <string name="title_activity_accueil">AccueilActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_presentation">Presentation</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_map_geo">MapGeo</string>
    <string name="title_activity_listeroffre">Lister Offre</string>
    <string name="title_activity_visualiseroffre">Visualiser Offre</string>
    <string name="title_activity_chercheroffre">Chercher Offre</string>
    <string name="title_activity_creercv">Creer CV</string>
    <string name="title_activity_editercv">Editer CV</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_connexion">ConnexionActivity</string>
    <string name="localiser">Geolocaliser</string>
    <string name="apropos">A propos</string>
    <string name="creercv">Creation CV</string>
    <string name="postuler">Postuler</string>
    

</resources>
