<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textauthentification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/authentification"
        android:textSize="@dimen/taille_titre" />

    <TextView
        android:id="@+id/txtforget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnquitter"
        android:layout_marginTop="30dp"
        android:text="@string/forget"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtinscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtforget"
        android:layout_alignBottom="@+id/txtforget"
        android:layout_alignParentLeft="true"
        android:text="@string/inscription"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnquitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnconnecter"
        android:layout_alignBottom="@+id/btnconnecter"
        android:layout_alignRight="@+id/txtinscription"
        android:textColor="@android:color/black"
        android:text="@string/quitter" />

    <EditText
        android:id="@+id/editlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textauthentification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:textColor="@android:color/black"
        android:ems="10"
        android:hint="@string/login" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editlogin"
        android:layout_below="@+id/editlogin"
        android:textColor="@android:color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnconnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editpassword"
        android:textColor="@android:color/black"
        android:layout_below="@+id/editpassword"
        android:layout_marginTop="15dp"
        android:text="@string/connexion" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login" />

</RelativeLayout>