<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ForgetActivity" >

    <TextView
        android:id="@+id/txtinscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/oubier"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/txtid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtinscription"
        android:layout_marginTop="19dp"
        android:text="@string/id"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtid"
        android:layout_alignRight="@+id/txtinscription"
        android:ems="10" />

    <TextView
        android:id="@+id/txtprenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtid"
        android:layout_marginTop="24dp"
        android:text="@string/prenom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtprenom"
        android:layout_alignRight="@+id/editid"
        android:layout_marginRight="40dp"
        android:text="" />

    <TextView
        android:id="@+id/txtnom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtprenom"
        android:layout_below="@+id/txtprenom"
        android:layout_marginTop="28dp"
        android:text="@string/nom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtnom"
        android:layout_alignRight="@+id/prenom"
        android:text="" />

    <TextView
        android:id="@+id/txtemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtnom"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtemail"
        android:layout_alignRight="@+id/editid"
        android:text="" />

    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtemail"
        android:layout_marginTop="42dp"
        android:text="@string/log"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtpassword"
        android:layout_alignBottom="@+id/txtpassword"
        android:layout_alignRight="@+id/email"
        android:text="" />

    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtlogin"
        android:layout_marginTop="23dp"
        android:text="@string/pass"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtpassword"
        android:layout_alignRight="@+id/login"
        android:text="" />

    <Button
        android:id="@+id/btnannuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtpassword"
        android:layout_below="@+id/login"
        android:text="@string/annuler" />

    <Button
        android:id="@+id/btnvalider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/nom"
        android:layout_below="@+id/login"
        android:text="@string/valider" />
   
</RelativeLayout>